objects/External_User_Action_Log__c.object
<CustomObject>
    <fields>
        <fullName>ABB_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ABB Manager</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>User.Is_External_User__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$User.DisabledLookupFilterMode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>External_User_Action_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External User</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Is_External_User__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$User.DisabledLookupFilterMode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>External_User_Action_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Validity_Date__c</fullName>
        <label>New Validity Date</label>
        <type>Date</type>
    </fields>
    <label>External User Action Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Action__c</columns>
        <columns>External_User__c</columns>
        <columns>ABB_Manager__c</columns>
        <columns>New_Validity_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External User Action Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>